# vss-rs

./: .gitignore  Cargo.toml  README.md  cube.bvox  tiny_grid.bvox  tiny_svo.bsvo
output/: empty.bsvo  empty.bvox  random_svo.bsvo  tiny_svo.bsvo
src/: bsvo.rs  bvox.rs  lib.rs  rle.rs  svo.rs  vox.rs
