[package]
name = "vss-rs"
version = "0.1.0"
edition = "2021"

description = "Voxel storage system for rust ported from cpp."
homepage = "https://github.com/cooukiez/vss-rs"
repository = "https://github.com/cooukiez/vss-rs"
readme = "README.md"

license = "MIT"
exclude = ["output/*"]

[dependencies]
glam = "0.29.0"
rand = "0.8"